--- a/Qt Project Files/SpiralBound/studycard.ui
+++ b/Qt Project Files/SpiralBound/studycard.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>343</height>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>300</y>
+     <y>330</y>
      <width>380</width>
      <height>25</height>
     </rect>
@@ -67,7 +67,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -95,6 +95,19 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_shuffle">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>303</y>
+     <width>83</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Shuffle</string>
+   </property>
   </widget>
  </widget>
  <resources/>
